# bookcha-server

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  manage.py  pyproject.toml  services.py  test.py
.github/workflows/: google-cloudrun-source.yml
alembic/: env.py
alembic/versions/: 081a8518b500_.py  d72618c1de63_.py
app/: config.py  db.py  main.py
app/orm/: base.py  tables.py
app/views/: __init__.py  records.py
scripts/: start.sh
