[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standart]>=0.115.8",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.9",
    "openai>=1.63.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["app"]
