[project]
name = "bookcha-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "python-jose[cryptography]>=3.4.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
packages = ["app", "alembic"]
